<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">models</string>
    <string name="action_settings">settings</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="linkedin">LinkedIn</string>
    <string name="wordpress">Wordpress</string>
    <string name="myspace">Myspace</string>
    <string name="start_app">Starting application:</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
	<string name="banner_ad_unit_id">ca-app-pub-2226934841827398/2862283296</string>
    

    <string-array name="cat_names">
        <item>George</item>
        <item>Zubin</item>
        <item>Carlos</item>
        <item>Frank</item>
        <item>Charles</item>
        <item>Simon</item>
        <item>Fezra</item>
        <item>Henry</item>
        <item>Schuster</item>
        <item>Abe</item>
        <item>Sally</item>
        <item>Geordie</item>
        <item>Alex</item>
        <item>Ebenezer</item>
        <item>Ulric</item>
        <item>Donovan</item>
    </string-array>

</resources>
